Version 2.5
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.5
--------------------------------------------------------
- Show key bindings defined in ~/dotfiles/hypr/conf/keybindings.conf rofi menu. Opens with SUPER+CTRL+H or right click on Apps
- Added keybinding to toggle all windows to float and back to tiling (Don't work with web apps)
- Added polkit-gnome to installation script

Version 2.4
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.4
--------------------------------------------------------
- Now using sddm as Display Manager
- sddm theme sddm-sugar-dark available
- Add Waybar theme switcher (SUPER + CTRL + T)
- Add Waybar theme engine ~/dotfiles/waybar/themes
- Switch to chromium as default browser (SUPER + B)
- Brave is alternative browser (SUPER + CTRL + B)
- Default animations back to standard ~/dotfiles/conf/animations-low.conf due to compatibility reasons. Enhanced animations available in ~/dotfiles/conf/animations-high.conf
- Thunar is default file manager now due to compatibility reasons
- Default icons set to Papirus icon theme
- GTK files updated and cleaned up. gtk-4.0 added (please check the ~/dotfiles/3-dotfile.sh for required symlinks)
- Default cursor set to Bibata Modern Ice
- 1-install.sh checks if base-devel is installed. Required to install and compile yay

Version 2.3
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.3
--------------------------------------------------------
- Add clipboard manager cliphist
- Waybar: Add numbers to workspaces
- Waybar: Add icon for wallpaper selection
- Waybar: Add cliphist icon (click = open, right-click = delete item, middle-click = clear data)
- Screenshots: Add swappy
- Icons: Changed to Kora Icon Theme
- Rofi: New Layout featuring current wallpaper as a background for launcher, cliphist and wallpaper selection
- Update Wallpaper: Add random transition effects
- Hyprland: Exclude configurations files into dedicated files in hypr/conf/ directory