@@ -63,8 +63,8 @@ bind = $mainMod SHIFT, left, resizeactive, -100 0
 bind = $mainMod SHIFT, up, resizeactive, 0 -100
 bind = $mainMod SHIFT, down, resizeactive, 0 100
 
-binde = , XF86MonBrightnessUp, exec, brightnessctl set 100%
-binde = , XF86MonBrightnessDown, exec, brightnessctl set 70%
+binde = , XF86MonBrightnessUp, exec, brightnessctl -q s +20%
+binde = , XF86MonBrightnessDown, exec, brightnessctl -q s 20%-
 
 # ----------------------------------------------------- 
 # Passthrough SUPER KEY to Virtual Machine
